<resources>
    <string name="app_name">FirstApp</string>
    <string name="usernname">Usernname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Login">Login</string>
    <string name="signup">Signup</string>
    <string name="fullname">Name</string>
    <string name="email">Email</string>
    <string name="loginhere">Loginhere</string>
    <string name="Signup">SignUp</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Home">Home</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_user_prof">UserProf</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>